--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Lugares" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Agenda" tabIcon="information-circle"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Noticias" tabIcon="contacts"></ion-tab>
 </ion-tabs>
