--- a/src/pages/atraccion/atraccion.html
+++ b/src/pages/atraccion/atraccion.html
@@ -36,6 +36,11 @@
 
             </div>
         </ion-row>
+        <ion-row>
+            <button ion-button (click)="speak()">
+                speak
+            </button>
+        </ion-row>
         <ion-row text-center>
             <ion-col no-padding>
                 <h3>
